Edited to publish to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://NohaAshraf85.github.io/Employee-Directory",
+  "homepage": "https://aseppala98.github.io/Employee-Directory",
   "name": "employee-directory-react-app",
   "version": "0.1.0",
   "private": true,
